// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders code block corresponding to language 1`] = `
<pre
  class="container"
>
  <code
    class="language-javascript code"
  >
    import React from "react"
  </code>
</pre>
`;

exports[`renders plaintext if language is not supported 1`] = `
<pre
  class="container"
>
  <code
    class="language-plaintext code"
  >
    This is an invalid language
  </code>
</pre>
`;
